Refactor contract store and add token pool API
