# openapi/src/eds/tokenpool/eds-tokenpool.yaml
@@ -62,14 +62,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/TokenPoolSendRequest'
+              $ref: '#/components/schemas/TokenPoolExecuteRequest'
       responses:
         '200':
           description: ok
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TokenPoolSendResponse'
+                $ref: '#/components/schemas/TokenPoolExecuteResponse'
         '400':
           $ref: '../common/eds-common.yaml#/components/responses/400'
         '404':
@@ -88,11 +88,18 @@ components:
     TokenInput:
       type: object
       description: The token input for the token transfer.
+      required:
+        - transferFactory
+        - extraArgs
+        - tokenPoolHoldings
       properties:
         transferFactory:
           $ref: "../common/eds-common.yaml#/components/schemas/ContractId"
         extraArgs:
           type: object
+          required:
+            - metadata
+            - context
           properties:
             metadata:
               type: object
